--- a/index.html
+++ b/index.html
@@ -1,111 +1,181 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="eremy Persing, Jeremy Persing Portfolio, Web Design, Web Development, Computer Science, Databases
+        Sacramento State, Website, Website Builder, Computer Science, Software Engineer" />
+        <meta name="author" content="Jeremy Persing" />
         <title>Jeremy Persing Portfolio</title>
-        <meta charset="UTF-8">
-        <meta name="description" content="Jeremy Persing Portfolio">
-        <meta name="keywords" content="Jeremy Persing, Jeremy Persing Portfolio, Web Design, Web Development, Computer Science, Databases
-                                        Sacramento State, Website, Website Builder, Computer Science, Software Engineer">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-        <script src='script.js'></script>
+        <link rel="icon" type="image/x-icon" href="assets/img/OIP.jpg" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body onload="typeWriter()">
-        <div id="header">
-            <header>
-                <h1 id='name'></h1>
-            </header>
-            <a id='arrow' style="visibility: hidden;" href="#projects">
-                <svg id="arrow" width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-chevron-compact-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"/>
-                </svg>
-            </a>
-        </div>
-        <div class='work'>
-            <div id="projects">
-                <section>
-                    <h1 class='mb-3'>Personal Projects</h1>
-                    <div class='container'>
-                        <div class='row mb-3'>
-                            <div class='col-md-6'>
-                                <a href="https://gamblers-paradise.herokuapp.com/">
-                                    <img  class="img-thumbnail" src="./casino.jpg" alt="Casino App Thumbnail">
-                                </a>
-                                <strong>Casino</strong>
-                            </div>
-                            <div class="col-md-6">
-                                <a href="https://jeremypersing.github.io/weather-app/">
-                                    <img  class="img-thumbnail" src="./weather-app.jpg" alt="Weather App Thumbnail">
-                                </a>
-                                <strong>Weather App</strong>
-                            </div>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Jeremy Persing</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header class="masthead">
+            <div class="container d-flex h-100 align-items-center">
+                <div class="mx-auto text-center">
+                    <h1 class="mx-auto my-0 text-uppercase">Jeremy Persing</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Web Development Portfolio</h2>
+                    <a class="btn btn-primary js-scroll-trigger" href="#about">About Me</a>
+                </div>
+            </div>
+        </header>
+        <!-- About-->
+        <section class="about-section text-center" id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4">About Me</h2>
+                        <p class="text-white-50">
+                            My name is Jeremy Persing. I am from Northern California and currently attend Sacramento
+                            State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
+                            so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
+                            and find fulfillment in what they do.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Projects-->
+        <section class="projects-section bg-light" id="projects">
+            <div class="container">
+                <!-- Featured Project Row-->
+                <h2 class='text-center mb-5'>Latest Project</h2>
+                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><a href='https://gamblers-paradise.herokuapp.com/'><img class="img-fluid mb-3 mb-lg-0" src="assets/img/casino.png" alt="Gambler's Paradise Thumbnail" title="See Gambler's Paradise"/></a></div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4>Gambler's Paradise</h4>
+                            <p class="text-black-50 mb-0">
+                                Gambler's Paradise is an entertainment application that allows users to create an account and 
+                                gamble with in game currency. The application features five different games and a login authetication system.
+                                It was built using the MERN stack and was styled with Bootstrap.
+                            </p>
                         </div>
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <a href="https://jeremypersing.github.io/shopping-cart">
-                                    <img class="img-thumbnail" src="shopping-cart.jpg" alt="Shopping Cart thumbnail">
-                                </a>
-                                <strong>Shopping Cart</strong>
-                            </div>
-                            <div class="col-md-6">
-                                <a href="https://jeremypersing.github.io/resume-project">
-                                    <img class="img-thumbnail" src="resume-img.jpg" alt="Resume Builder thumbnail">
-                                </a>
-                                <strong>Resume Builder</strong>
-                            </div>
-                        </div>
-                        <div class='row'>
-                            <div class="col-md-6 offset-md-3">
-                                <a href="https://jeremypersing.github.io/memory-project">
-                                    <img class="img-thumbnail" src="memory-game.jpg" alt="Mascot Mania thumbnail">
-                                </a>
-                                <strong>Memory Game</strong>
+                    </div>
+                </div>
+                <!-- Project One Row-->
+                <h2 class='text-center mb-5'>Other Projects</h2>
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href="https://jeremypersing.github.io/weather-app/"><img class="img-fluid" src="assets/img/weather.png" alt="Weather App Thumbnail" title="See Weather App"/></a></div>
+                    <div class="col-lg-6">
+                        <div style='background-color: #323232;'class="text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Daily Weather App</h4>
+                                    <p class="mb-0 text-white-50">
+                                        This weather app= allows users to enter in their city and 
+                                        will show the weather forecast in the location for the next week. 
+                                        It was built with Vanilla JavaScript, HTML, and CSS.
+                                    </p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
                             </div>
                         </div>
                     </div>
-                </section>
-            </div>
-            <div id="about-me">
-                <section class='container'>
-                    <h1>About Me</h1>
-                    <div class='row mt-3'>
-                        <div class='col-lg-4'>
-                            <img class='border-photo' src='personal-image.jpg' alt='Personal Image' height='300px'>
-                        </div>
-                        <div class="col-lg-8 mt-5">
-                            <p class='about-me-text'>
-                                Hi! My name is Jeremy Persing. I am from Northern California and currently attend Sacramento
-                                State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
-                                so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
-                                and find fulfillment in what they do.
-                            </p> 
-                        </div>
-                    </div>
-                </section>
-            </div>
-            <div id="contact-information">
-                <section>
-                    <h1>Contact Me</h1>
-                    <div class='container pb-3 pt-3'>
-                        <div class="row">
-                            <div class="col-2 offset-2">
-                                <a href='./Tech Resume.pdf' download><img class="contact-photo" src="./cv.svg" alt="Resume Logo" title='My Resume' height="50px"></a>
-                            </div>
-                            <div class="col-2">
-                                <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="./linkedin.png" alt="LinkedIn Logo" title='My LinkedIn' height="50px"></a>
-                            </div>
-                            <div class="col-2">
-                                <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./icons8-github.svg' title='My Github' alt="Github Logo" height='50px'></a>
-                            </div>
-                            <div class="col-2">
-                                <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./mail.svg" height="50px" height="Gmail Logo" title='My Email' alt="Image for Gmail link"></a>
+                </div>
+                <!-- Project Two Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href='https://jeremypersing.github.io/shopping-cart'><img class="img-fluid" src="assets/img/shopping-cart.png" alt="Shopping Cart Thumbnail" title="See Shopping Cart"/></a></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div style='background-color: #323232;' class="text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">Shopping Cart Application</h4>
+                                    <p class="mb-0 text-white-50">
+                                        This shopping cart application allows users to place items into a 
+                                        cart and then it gives them a subtotal for their items. It was built using React and Bootstrap.
+                                    </p>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
+                <!-- Project Three Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href="https://jeremypersing.github.io/resume-project"><img class="img-fluid" src="assets/img/Resume.png" alt="Resume Builder Thumbnail" title="See Resume Builder"/></a></div>
+                    <div class="col-lg-6">
+                        <div style='background-color: #323232;'class="text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Resume Builder</h4>
+                                    <p class="mb-0 text-white-50">
+                                        This resume builder allows for users to input the information that a resume would require and 
+                                        then when the user submits their information, it will place their information in a resume format. It was built with React and Bootstrap.
+                                    </p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project Four Row-->
+                <div class="row justify-content-center no-gutters">
+                    <div class="col-lg-6"><a href='https://jeremypersing.github.io/memory-project/'><img class="img-fluid" src="assets/img/mascot.png" alt="Mascot Mania Thumbnail" title="See Mascot Mania"/></a></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div style='background-color: #323232;' class="text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">Mascot Mania</h4>
+                                    <p class="mb-0 text-white-50">
+                                        Mascot Mania is a game that allows users to test their memories
+                                        and keeps track of their current wins and how many cards they have
+                                        gotten in a row without clicking on the same card twice.
+                                        It was built using React and Bootstrap. 
+                                    </p>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
+        </section>
+        
+        <!-- Contact-->
+        <section class="contact-section bg-black" id='contact'>
+            <h2 class="text-center text-white mb-4">Contact Information</h2>
+                <div class="social d-flex justify-content-center">
+                    <a class="mx-2" href="./assets/Jeremy_Persing_Resume.pdf" download><i class="far fa-file-pdf"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com/in/jeremy-persing/"><i class="fab fa-linkedin"></i></a>
+                    <a class="mx-2" href="https://github.com/JeremyPersing"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="mailto:jpersing1999@gmail.com"><i class="far fa-envelope"></i></a>
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Jeremy Persing 2021</div></footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
     </body>
 </html>
